# Servers

./: .env  Cargo.toml
migrations/2024-01-19-185040_create_servers/: down.sql  up.sql
src/: controller.rs  database.rs  main.rs  models.rs  schedule.rs  schema.rs  tasks.rs  utils.rs
