[package]
name = "server_manager_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server_manager_api_runner"
path = "src/main.rs"

[dependencies]
log = "0.4.20"
env_logger = "0.11.0"
reqwest = { version = "0.11.23", features = ["json"] }
chrono = "0.4.31"
diesel = { version = "2.0.0", features = ["mysql", "chrono"] }
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
cron = "0.12.0"
tokio = { version = "1.35.1", features = ["full"] }
regex = "1.10.2"
features = "0.10.0"
serde = { version = "1.0.195", features = ["derive"] }
teloxide = { version = "0.12.2", featues = "macros" }
rand = "0.8.5"
resvg = "0.37.0"
